fix(ui): Fix runtime chart labels in dark mode (fixes HAWNG-2033)

--- a/packages/hawtio/src/plugins/runtime/Runtime.css
+++ b/packages/hawtio/src/plugins/runtime/Runtime.css
@@ -1,3 +1,7 @@
 #hawtio-main-page > div.pf-v6-c-page__main-container {
   margin-right: 0;
 }
+
+:where(.pf-v6-theme-dark):root {
+  --pf-v6-chart-axis--tick-label--Fill: white;
+}
